[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/global/Audio.gd" type="Script" id=1]

[node name="Audio" type="Node"]
script = ExtResource( 1 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="EffectsPlayer" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="InterfacePlayer" type="AudioStreamPlayer" parent="."]
bus = "Interface"
